force-app/main/default/objects/ContactEntitlement__c/ContactEntitlement__c.object-meta.xml
<CustomObject>
    <label>Contact Entitlement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>