force-app/main/default/objects/ContactEntitlement__c/fields/ContactAccount__c.field-meta.xml
<CustomField>
    <fullName>ContactAccount__c</fullName>
    <formula>Real_Entitlement__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account</label>
    <type>Text</type>
</CustomField>