force-app/main/default/objects/ContactEntitlement__c/fields/ContactID18__c.field-meta.xml
<CustomField>
    <fullName>ContactID18__c</fullName>
    <formula>CASESAFEID(  Contact__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID18</label>
    <type>Text</type>
</CustomField>