force-app/main/default/objects/ContactEntitlement__c/fields/HowToQs__c.field-meta.xml
<CustomField>
    <fullName>HowToQs__c</fullName>
    <formula>Real_Entitlement__r.EntitledToHowToQuestions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How To Qs</label>
    <type>Text</type>
</CustomField>