force-app/main/default/objects/ContactEntitlement__c/fields/Real_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Real_Entitlement__c</fullName>
    <label>Entitlement Real</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Contact Entitlements</relationshipLabel>
    <relationshipName>Contact_Entitlements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>