force-app/main/default/objects/ContactEntitlement__c/fields/Topic_ID__c.field-meta.xml
<CustomField>
    <fullName>Topic_ID__c</fullName>
    <formula>Real_Entitlement__r.TopicID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Topic ID</label>
    <type>Text</type>
</CustomField>